@@ -38,6 +38,11 @@
 	text-align: center;
 }
 
+.ep_search_reorder {
+	margin: 0.4em auto 0 auto;
+	text-align: center;
+}
+
 .ep_search_feed {
 	white-space: nowrap;
 }
